[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["EfremovAS <Alexef3@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
motor = "^3.4.0"
uvicorn = {extras = ["all"], version = "^0.29.0"}
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
